# hedis-config-fix

./: .gitignore  CHANGELOG.md  README.md  hedis-config-fork.cabal  hedis-config.cabal
examples/: redis.yml
src/Database/Redis/: Config.hs
