name:                hedis-config
version:             0.0.1
synopsis:            Easy trivial configuration for Redis

license:             BSD3
license-file:        LICENSE
author:              Aleksey Uimanov
maintainer:          s9gf4ult@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
                     , RecordWildCards

  build-depends:       base >=4.6 && <4.8
                     , aeson
                     , hedis >= 0.6
                     , scientific
                     , text
                     , time

  exposed-modules:     Database.Redis.Config
