name:                hedis-config
version:             0.0.1
synopsis:            Easy trivial configuration for Redis

license:             BSD3
license-file:        LICENSE
author:              Aleksey Uimanov
maintainer:          s9gf4ult@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/redis.yml
                  , README.md

homepage: https://bitbucket.org/s9gf4ult/hedis-config
source-repository head
  type: git
  location: git@bitbucket.org:s9gf4ult/hedis-config.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
                     , RecordWildCards

  build-depends:       base >=4.6 && <4.8
                     , aeson
                     , hedis >= 0.6
                     , scientific
                     , text
                     , time

  exposed-modules:     Database.Redis.Config

  ghc-options: -Wall